# med-projekt

./: .gitignore  Justfile  README.md  pyproject.toml
base/: abstract_itemset.py  abstract_lcm.py  factory.py  output.py
data/test_files/: DB_LHUI.txt  DB_Utility_broken.txt  DB_cost.txt  contextEMMA.txt  contextEMMAWithNames.txt  contextKrimp.txt  contextLPP.txt  contextMPFPS.txt  contextNOSEP.txt  dbHUQI.txt  db_emdo.txt  db_emdoP.txt  example_CEPN.txt  mooc_small.txt  output.txt  patternA.txt  patternB.txt  patterns.txt  patterns40.txt  patternsKrimp.txt  sequence_broken.txt  slimPatternsChess.txt  szu.txt  szu_clean.txt  taxonomy_CLHMiner.txt  test.csv  transaction_CLHMiner.txt
data/test_files/early_termination_failure/: reason_1  reason_2  reason_3  reason_4  reason_5
docs/: benchmark-summary.csv
lcm/: cli.py  correctness.py  dataset.py  itemset.py  itemsets.py  lcm.py  lcm_intersec.py  output.py  profile.py  transaction.py  utils.py
lcm_opt/: dataset.py  itemset.py  lcm.py  transaction.py  utils.py
scripts/: cli.py  correctness.py  profile.py
tests/integration/: test_correctness.py
tests/lcm/: test_dataset.py  test_itemset.py  test_lcm.py  test_transaction.py  test_utils.py
tests/lcm_opt/: test_dataset.py  test_itemset.py  test_lcm.py  test_transaction.py
